# avocado

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  default.nix  dpdk-avocado.patch  dpdk-build.sh.in  dpdk-config.patch  folly-scone.patch  openssl-new.patch
benchmark_scripts/: run.py  shared.py  write_benchmark.py
src/: CMakeLists.txt  client.cpp  common.cpp  common.h  copy_utility.c  generate_config.py  generate_traces.cpp  generate_traces.h  hello-server.cpp  runSimpleTraceGenerator.py  scone.cpp  server.cpp  setup.sh  simpleTraceGenerator.py  version.cpp.in
src/include/: list.h  store.h  version.h
src/include/crypt/: crc32.h  encrypt_openssl.h  encrypt_package.h  hash_openssl.h
src/include/crypt/release/: encrypt_openssl.h  encrypt_package.h
src/include/memtable/: allocator.h  memtable.h  meta_data.h
src/include/protocol/abd/: crypt_context.h  key_access.h  lamport.h  msg.h  msg_buffer.h  protocol.h  replica.h  replica_context.h  rpc_context.h  span.h  svr_context.h
src/include/stats/: crystal_clock.h  rdtsc.h
src/include/stats/debug/stats/: core.h  crypt_stats.h  encrypt_openssl.h  encrypt_package.h  packet_stats.h  size_events.h
src/include/stats/release/stats/: core.h  packet_stats.h
src/include/utils/: constexpr_math.h  enumerate.h  final_act.h  utility.h
src/memtables/: create_allocator.cpp  memtable.cpp
src/stats/: rdtsc.cpp
src/stats/debug/: core.cpp  crypt_stats.cpp  crystal_clock.cpp  packet_stats.cpp
src/stats/release/: core.cpp  crystal_clock.cpp
src/tests/: city_hash_test.cpp  locked_alloc_test.c  malloc.cpp  memtable_test.cpp  package_stats_test.cpp  package_test.cpp  package_test_print.h  skiplist_test.cpp
src/vars/: shared_ptr_size.cpp
